# nav2_tutorial

./: .gitignore  .gitmodules  README.md  package.xml  setup.cfg  setup.py
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yaml  requirements.txt
agilex_demo/: interactive_waypoint_follower.py
config/: demo_waypoints.yaml  dual_ekf_navsat_params.yaml  nav2_params.yaml  vrtk_navsat_params.yaml
launch/: dual_ekf_navsat.launch.py  gps_waypoint_follower.launch.py  (+3 more)
src/nav2_tutorial/: package.xml  setup.py
src/nav2_tutorial/config/: dual_ekf_navsat_params.yaml  fp_driver_config.yaml  gps_waypoints.yaml  gps_wpf_demo.mvc  nav2_params.yaml  nav2_params_sensors.yaml  nav2_plan_viz.rviz
src/nav2_tutorial/launch/: all_nodes.launch.py  fp_driver_node.launch  fp_driver_node.launch.py  gps_waypoint_follower.launch.py  mapviz.launch.py  navigation.launch.py  navigation_launch.py  robot_description.launch.py
src/nav2_tutorial/src/: gps_waypoint_logger.py  interactive_wp_follower.py  logged_refill_follower.py  logged_smooth_follower.py  logged_waypoint_follower.py  periodic_logger.py  precise_wp_follower.py  simple_follower.py  smooth_wp_follower.py  terminal_logger.py
src/nav2_tutorial/src/dashboard/: current_pose_logger.py  dashboard.py  send_clicked_point.py
src/nav2_tutorial/src/loggers/: gps_keylogger.py  gps_periodic_logger.py  terminal_logger.py
src/nav2_tutorial/src/utils/: nav_utils.py  parser_utils.py  set_datum.py  visualize_gps.py  visualize_gps_yaml.py
src/nav2_tutorial/urdf/: generate_urdf.sh  scout_vrtk.urdf  scout_vrtk.xacro
(+20 files in other folders)
